# sequence_qImgProjGUIRef

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.23be675  LICENSE  ReadMe.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qWebCamShot_zh_CN.ts
CalcHomoRevrese/CalcHomoRevrese__QT_5_12_12_Linux_GNU_CXX_9.4.0_11__Linux-5.15.0-139-generic_bin/: t_p2pi.xml
CalcHomoRevrese/src/: CMakeLists.txt  main.cpp
QWidgetViewResize/src/: zoomablewidget.h
QtMouseMoveViewTranlated/src/: CMakeLists.txt  QtMouseMoveViewTranlated_zh_CN.ts  main.cpp
cmake_Kelvin/: CMakeLists--FindOmp_findOpenMP.txt  CMakeLists--FindOpenCV.txt  CompilerWarnings.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  UniversalAppleBuild.cmake  myprojectsetting.cmake
piece1_CalcHomoRevrese/: result.md
piece1_CalcHomoRevrese/CalcHomoRevrese__QT_5_12_12_Windows_MSVC_CXX_19.29.30159.0_11_x64_Windows-10.0.19044_bin/: t_p2pi.xml
piece1_CalcHomoRevrese/src/: CMakeLists.txt  main.cpp
piece1_CalcHomoRevrese/src/cmake_Kelvin/: myprojectsetting.cmake
piece2_QtMouseMoveViewTranlated/src/: CMakeLists.txt  QtMouseMoveViewTranlated_zh_CN.ts  panview.cpp  panview.h
piece3_QWidgetViewMove/src/: CMakeLists.txt  main.cpp  pannablewidget.cpp  pannablewidget.h
piece4_QWidgetViewResize/src/: CMakeLists.txt  main.cpp  zoomablewidget.cpp
proj_UsbCamWebCamShotQt/src/: CMakeLists.txt  mainwindow.cpp
proj_app1_qUsbWedCamShot/src/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.ui
proj_app1_qUsbWedCamShot/src/cmake_Kelvin/: CMakeLists--FindOmp_findOpenMP.txt  CMakeLists--FindOpenCV.txt  StaticAnalyzers.cmake
proj_app2_qUsbWebCamVideo/src/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
proj_app2_qUsbWebCamVideo/src/cmake_Kelvin/: myprojectsetting.cmake
proj_qUsbWebCamVideo/src/: CMakeLists.txt  mainwindow.h  qWebCamShot_zh_CN.ts
proj_qUsbWedCamShot/src/: CMakeLists.txt  mainwindow.h
